src/objects/Questionnaire_Form__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>Set questionnaire form assigned date</description>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Set questionnaire form completed date</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Set questionnaire form expiration date</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup with Questionnaire</description>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaire Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User, Contact, Employee, etc</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>Set status for questionnaire form</description>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Questionnaire Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Form-{0000}</displayFormat>
        <label>Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>